src/test/deca/context/invalid/operation-binaire-inferieur-egal-wrong.deca
// Description:
//    Test 3.33 fail avec inférieur ou égal
//
// Resultats:
//    Erreur contextuelle
//    Ligne 12 : The left operand of a comparison operation has to be an int or a float (rule 3.33)
//
// Historique:
//    cree le 06/01/2023

{
    "hello world" <= 1;
}